--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "gestao-bancaria-api"
 version = "0.5"
-description = "Add your description here"
+description = "Gestão bancária API"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
